# noir_swift

./: .gitignore  Cargo.toml  Nargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
swift/: bridging-header.h  build.sh  main.swift
