[package]
name = "noir_swift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[build-dependencies]
swift-bridge-build = "0.1"

[dependencies]
swift-bridge = "0.1"
noir_rs = { git = "https://github.com/visoftsolutions/aztec-packages.git", branch = "0.16.1", package = "noir_rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"